2003-12-30  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-modification-selection-change.c, cong-selection.h, select.c

	Attempts to fix bug #130236 (Excessive cong_node_get_ordering assertion failures) by making selection change an atomic range operation

	* cong-editor-widget3.c

	Fix for bug #123490 (Carriage return should add a carriage return if whitespace is being preserved)

	* cong-editor-node-text.c

	Added some assertions

	* cong-command.c

	Fix for bug #130227 (Pasting simple text using the middle mouse button often causes assertion failures)

	* cong-editor-area-flow-holder-blocks.c, cong-editor-node.c

	Fix for bug #129907 (Elements appear in reverse order under certain circumstances); made CongEditorNode get_prev/next routines aware of nodes missing due to whitespace removal

2003-12-21  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-location.c

	Fix for bug #129752 (nested entity edit)

2003-12-20  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-node.c, cong-node.h

	Fix for bug #124208 (entity modification is not saved)

	* cong-document.c

	Implemented various missing node types in cong_document_get_node_name, fixing a problem in the test data for bug #120976

2003-12-19  David Malcolm <david@davemalcolm.demon.co.uk>

	* xmldata.c

	Fix for bug #125720 (crash on deleting nothing)

	* xmldata.c

	Fix for bug #124508 (crash on inserting sibling)

	* cong-editor-area-composer.c, cong-editor-area-composer.h, cong-editor-area-entity-decl.c, cong-editor-area-entity-ref.c, cong-editor-area-flow-holder-blocks.c, cong-editor-area-flow-holder-inlines.c, cong-editor-area-labelled.c, cong-editor-area-line.c, cong-editor-area-structural.c

	Fix for bug #125918 (Elements appearing in incorrect order)

	* cong-node.c

	Added some bulletproofing to the ordering routine

	* cong-editor-node-text.c
